--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "Sports Analytics Engineering" # This will show up in places like t
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 # email: "joris[at]unravelsports.com"
-twitter_username: "@unravelsports"
+twitter_username: "unravelsports"
 linkedin_username: "joris-bekkers-33138288"
 
 #########################################################################################
