--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,13 @@
 title: "UnravelSports"
 author: "Joris Bekkers"
-description: "Sports Analytics Engineering" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "UnravelSports: Sports Data Analytics Research & Engineering Consultancy"
+# This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 # email: "joris[at]unravelsports.com"
-twitter_username: "unravelsports"
-linkedin_username: "joris-bekkers-33138288"
+#twitter_username: "unravelsports"
+#linkedin_username: "joris-bekkers-33138288"
 
 #########################################################################################
 ######### Nothing below needs to be changed (unless you know what you're doing) #########
