--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "UnravelSports"
 author: "Joris Bekkers"
-description: "UnravelSports: Sports Data Analytics Research & Engineering Consultancy"
+description: "Sports Data Analytics Research & Engineering Consultancy"
 # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
