--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ code/
 vids/
 other/
 _posts/2022-03-14-vectorized-pitch-control.md
+_posts/2022-07-12-player-id-matching-system.md
 imgs/timebudget*
 imgs/pitch_control_1.png
