--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ other/
 _posts/2022-03-14-vectorized-pitch-control.md
 imgs/timebudget*
 imgs/pitch_control_1.png
+/_posts/2023-02-15-pressing-tension.md
