--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ _posts/2022-03-14-vectorized-pitch-control.md
 imgs/timebudget*
 imgs/pitch_control_1.png
 /_posts/2023-02-15-pressing-tension.md
+
+*/.DS_Store
+.DS_Store
+.vscode/
